# ultimate-lighthouse

./: .env  CMakeLists.rtc  CMakeLists.txt  NEW_DROPLET.md  README.md  combo_litehoose.cpp  cycling_udp_beacon.cpp  ecoystem.config.js  house.cpp  instructions.md  latest_litehaus.html  lighthouse_simple_test.cpp  litehaus  net_monitor-a.cpp  net_monitor-b.cpp  net_monitor-c.cpp  nmap_portscan_shiftyness.md  package.json  petey_wrote.txt  server.js  start-lighthouse.sh  the_jsonifier_includes_lighthouse.txt  ultimate-lighthouse.service  ultimate_lgihthouse.cpp  ultimate_lighthouse.cpp  ultimate_lighthouse_minimal.cpp
.github/: FUNDING.yml
html/: lighthouse_api.py
rtc-Jsonifier/: CMakeLists.txt
rtc-Jsonifier/Include/jsonifier/: JsonifierCore.hpp  Parser.hpp  Serialize_Impl.hpp
rtc-Jsonifier/Vcpkg/Tests/: main.cpp
rtc-Jsonifier/Vcpkg/ports/jsonifier/: portfile.cmake
rtc-Jsonifier/rtc-jsonifier/: CMakeLists.txt  rtc-jsonifier.cpp  rtc-jsonifier.h
server_rescue/: DEPLOYMENT_GUIDE.md  deploy.md  overview.txt  setup_litehaus_droplet.sh  the_server_doc.txt
src/: beacon_cli.cpp  claude_convo.txt  listener_cli.cpp  ultimate_TCP_lighthouse_listener.cpp  ultimate_public_lighthouse  ultimate_public_lighthouse_beacon.cpp  ultimate_public_lighthouse_beacon.rtc  ultimate_tcp_lighthouse_listener  ultimate_tcp_lighthouse_listener.rtc
src/components/: FlagshipLighthouseShowcase.jsx
uk-html/: index.html  index.old  index.usa  lighthouse_api.py  litehaus_ghost.nmap  london_lighthouse_api.py  start_london_lighthouse.sh
us-html/: index.html
